--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Heterogeneous Parallel Programming with CUDA C/C++"
+title: "Fundamentals of Heterogeneous Parallel Programming with CUDA C/C++"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
@@ -26,7 +26,7 @@ kind: "lesson"
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
 # Please don't change it: <USERNAME>/<PROJECT> is correct.
-repository: SinaMostafanejad/gpu_programming
+repository: MolSSI-Education/gpu_programming_beginner
 
 # Email address, no mailto:
 email: "education@molssi.org"
