--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 *.pyc
 *~
 .DS_Store
+.idea
 .ipynb_checkpoints
 .sass-cache
-.jekyll-cache/
 __pycache__
 _site
 .Rproj.user
-.Rhistory
-.RData
-*.lock
-.gitignore
+.jekyll-cache/
+
+_build/
